--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,30 +7,24 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/txtTestua"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Kaixo Mundua!"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.469" />
-
-    <EditText
-        android:id="@+id/editTextTextPostalAddress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPostalAddress"
-        tools:layout_editor_absoluteX="101dp"
-        tools:layout_editor_absoluteY="268dp" />
+        app:layout_constraintVertical_bias="0.351" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnAgurra"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        tools:layout_editor_absoluteX="112dp"
-        tools:layout_editor_absoluteY="365dp" />
+        android:text="Klik Hemen"
+        tools:layout_editor_absoluteX="143dp"
+        tools:layout_editor_absoluteY="341dp"
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
