--- a/C#/ASP.NET-MVC/WineShop/WineShop/Views/Saskia/Index.cshtml
+++ b/C#/ASP.NET-MVC/WineShop/WineShop/Views/Saskia/Index.cshtml
@@ -33,7 +33,7 @@
     <i class="fas fa-cart-arrow-down"></i>
     </a>
     <span id="item-count-@item.ArdoaId">@item.Kantitatea</span>
-    <a href="" class="AddLink" data-id="@item.ArdoaId">
+        <a href="" class="AddLink" data-id="@item.ArdoaId" data-kantitatea="@item.Kantitatea" data-salneurria="@item.Salneurria">
     <i class="fas fa-cart-plus"></i>
     </a>
     </div>
