--- a/C#/ASP.NET-MVC/WineShop/WineShop/Views/Shared/_LoginPartial.cshtml
+++ b/C#/ASP.NET-MVC/WineShop/WineShop/Views/Shared/_LoginPartial.cshtml
@@ -13,6 +13,10 @@
             <button  type="submit" class="nav-link btn btn-link text-dark">Logout</button>
         </form>
     </li>
+        <li class="nav-item">
+            @await Component.InvokeAsync("Karritoa", new {id = User.Identity?.Name })
+                  <i  class="fas fa-shopping-cart"></i> 
+            </li>
 }
 else
 {
